--- a/webpack-with-react/.gitignore
+++ b/webpack-with-react/.gitignore
@@ -71,7 +71,8 @@ typings/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -93,4 +94,4 @@ Temporary Items
 .apdisk
 
 #dist
-./dist
+dist/
